lab 2
root@9ec7bcc0e3b7:/# python3 --version
Python 3.8.10
root@9ec7bcc0e3print ('Hello world')
bash: syntax error near unexpected token `'Hello world''
root@9ec7bcc0e3b7:/# python3.8
Python 3.8.10 (default, Jun  2 2021, 10:49:15) 
[GCC 9.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> print ('Hello world')
Hello world
>>> print #('Я учусь в институте')
<built-in function print>
>>> d=31 # присваеваем значение переменной
>>> print (d) #выводим значение
31
>>> print ('Бирюков Дмитрий Владимирович\n Р20Б1\n 04.07.2002')
Бирюков Дмитрий Владимирович
 Р20Б1
 04.07.2002
>>> print ('Липецк\n Ли́пецк — город (с 1779 года) в России, административный центр Липецкой области. Является ядром крупнейшей российской агломерации со специализацией в сфере чёрной металлургии полного цикла, промышленный, агротехнологический и авиационный центр.\n Достопримечательности:Комсомольский пруд,Путевой дворец Петра I,Галерея Назарова.
  File "<stdin>", line 1
    print ('Липецк\n Ли́пецк — город (с 1779 года) в России, административный центр Липецкой области. Является ядром крупнейшей российской агломерации со специализацией в сфере чёрной металлургии полного цикла, промышленный, агротехнологический и авиационный центр.\n Достопримечательности:Комсомольский пруд,Путевой дворец Петра I,Галерея Назарова.
                                                                                                                                                                                                                                                                                                                                                             ^
SyntaxError: EOL while scanning string literal
>>> print ('Липецк\n Ли́пецк — город  в России, административный центр Липецкой области. Является ядром крупнейшей российской агломерации со специализацией в сфере чёрной металлургии полного цикла, промышленный, агротехнологический и авиационный центр.\n Достопримечательности:Комсомольский пруд,Путевой дворец Петра I,Галерея Назарова.')
Липецк
 Ли́пецк — город  в России, административный центр Липецкой области. Является ядром крупнейшей российской агломерации со специализацией в сфере чёрной металлургии полного цикла, промышленный, агротехнологический и авиационный центр.
 Достопримечательности:Комсомольский пруд,Путевой дворец Петра I,Галерея Назарова.
>>> print ('1941/n Россия,Украина,Казахстан,Узбекистан,Беларусь'); print (); print ('1945\tСССР')
1941/n Россия,Украина,Казахстан,Узбекистан,Беларусь

1945    СССР
>>> print ("Мы хорошие друзья?");a = input()
Мы хорошие друзья?
Да
>>> j= input(); print (':D')
jjj
:D
>>> print ('\n5\tАлгебра\n4\tРусский\n4\tОПД')

5       Алгебра
4       Русский
4       ОПД
>>> a="Дима"; b=" Витя"; c=" Алёна"; print (a+b+c,'любят гулять вместе') 
Дима Витя Алёна любят гулять вместе
orange_stocks=input(); print ("Запасы апельсин на складе:", orange_stocks, "кг")
1051
Запасы апельсин на складе: 1051 кг
